--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         margin: 0 auto;
         display: flex;
         gap: 20px;
-        flex-wrap: wrap;
+        flex-wrap: nowrap; /* Ensure side-by-side layout */
       }
       textarea {
         flex: 1;
